# clbenchmark

./: CMakeLists.txt  README.md
include/: clpeak.h  common.h
src/: clpeak.cpp  common.cpp  dw.cpp  global_bandwidth.cpp  kernel_latency.cpp  local_bandwidth.cpp  tex_bandwidth.cpp
src/kernels/: dw_hp_kernels.cl  local_bandwidth_kernels.cl  tex_bandwidth_kernels.cl
